--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
     "react/display-name": "off",
     "react-hooks/exhaustive-deps": "off",
     "import/no-anonymous-default-export": "off",
-    "react/no-children-prop": "off"
+    "react/no-children-prop": "off",
+    "@next/next/no-img-element": "off"
   },
   "plugins": ["@typescript-eslint"]
 }
